--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇦 加拿大-222.2KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-710.4KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-288.6KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇨🇦 加拿大-864.1KB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇯🇵 日本-213.8KB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇯🇵 日本-300.5KB/s(Youtube:不良林), server: 85.208.108.19, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-202.2KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇦 加拿大-785.7KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 未知国家-1.16MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
-  - {name: 🇨🇦 加拿大-468.3KB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-285.8KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30010, type: trojan, password: 666dcf90-7f85-4f30-a36f-c1bffcf06b32, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-353.4KB/s(Youtube:不良林), server: node-us-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-us-c-01.texo.network, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-301.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-353.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-742.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-346.6KB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-254.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 818, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-348.9KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-222.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-710.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-288.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-864.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-213.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-300.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-785.7KB/s(Youtube:不良林)
-      - 未知国家-1.16MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-468.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-353.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-742.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-346.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-254.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-348.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇦 加拿大-222.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-710.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-288.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-864.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-213.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-300.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-785.7KB/s(Youtube:不良林)
-      - 未知国家-1.16MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-468.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-353.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-742.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-346.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-254.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-348.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-222.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-710.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-288.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-864.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-213.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-300.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-785.7KB/s(Youtube:不良林)
-      - 未知国家-1.16MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-468.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-353.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-742.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-346.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-254.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-348.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇦 加拿大-222.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-710.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-288.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-864.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-213.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-300.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-785.7KB/s(Youtube:不良林)
-      - 未知国家-1.16MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-468.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-353.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-742.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-346.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-254.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-348.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-222.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-710.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-288.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-864.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-213.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-300.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-785.7KB/s(Youtube:不良林)
-      - 未知国家-1.16MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-468.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-353.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-742.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-346.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-254.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-348.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇦 加拿大-222.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-710.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-288.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-864.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-213.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-300.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-785.7KB/s(Youtube:不良林)
-      - 未知国家-1.16MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-468.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-353.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-742.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-346.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-254.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-348.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇦 加拿大-222.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-710.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-288.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-864.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-213.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-300.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-785.7KB/s(Youtube:不良林)
-      - 未知国家-1.16MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-468.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-353.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-742.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-346.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-254.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-348.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
