--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-427.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 817, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-391.0KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-175.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 819, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-348.9KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇸🇬 新加坡-698.4KB/s(Youtube:不良林), server: 43.134.229.238, port: 57557, type: vmess, uuid: 7d869c3d-9223-4470-a51c-5c50d41b15cd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-341.6KB/s(Youtube:不良林), server: 193.108.118.30, port: 9090, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-255.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-201.0KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.18MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇳 中国-517.3KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-240.5KB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-175.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 819, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-1.23MB/s(Youtube:不良林), server: 51.38.118.42, port: 818, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇦 加拿大-490.4KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-319.7KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-325.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-427.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-391.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-175.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-348.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-698.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-341.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-255.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-201.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-517.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-175.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-490.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-427.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-391.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-175.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-348.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-698.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-341.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-255.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-201.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-517.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-175.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-490.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-427.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-391.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-175.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-348.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-698.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-341.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-255.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-201.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-517.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-175.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-490.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-427.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-391.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-175.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-348.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-698.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-341.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-255.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-201.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-517.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-175.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-490.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-427.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-391.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-175.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-348.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-698.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-341.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-255.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-201.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-517.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-175.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-490.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-427.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-391.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-175.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-348.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-698.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-341.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-255.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-201.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-517.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-175.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-490.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-427.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-391.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-175.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-348.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-698.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-341.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-255.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-201.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-517.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-175.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-490.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
